# pytest-asserts

./: .gitignore  pyproject.toml  pytest.ini
examples/: test_examples.py
src/pytest_asserts/: __init__.py  core_asserts.py  utils.py
tests/: conftest.py  test_run_example.py
