[project]
name = "pytest-asserts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.3",
]

[project.entry-points."pytest11"]
pytest_asserts = "pytest_asserts"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_asserts"]

[tool.hatch.build.targets.wheel.sources]
"src/pytest_asserts" = "pytest_asserts"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mkdocs-dracula-theme>=1.0.7",
    "mkdocs>=1.6.1",
    "pytest>=8.3.3",
]
